changing the presentation rule for summarizing nutritional information for meals
