# src/validators/foodValidators.js
@@ -4,3 +4,4 @@ exports.create = [
   body('name').isString().notEmpty(),
   body('calories').isNumeric()
 ];
+exports.allowedFields = ['name', 'category', 'calories', 'protein', 'carbs', 'fat'];
